Changes in 2.48

o tidying function calls (missing ...'s in metods) and Rd files
  (missing method defs.)

o bootLexis crashed if lex.id was non-numeric. Fixed now.

o new function: unLexis

o vignettes groomed

Changes in 2.47

o a function, Lexis2msm added, converts a Lexis object to a data frame
  suitable input to msm::msm 

o in functions modLexis, and thus glm.Lexis and gam.Lexis the warning
  about several transions out of the state is changed to a cat() 

o id = lex.id added as default in coxph.Lexis 

o glm. gam. and coxph.Lexis now print the list of transitions modeled
  differently 

Changes in 2.45/2.46

o A bug in preceding / succeeding was fixed.

o a print method for Lexis objects added. It rounds timescales and
  lex.dur to the same number of decimals. Default 2. Other numerical
  variables are rounded too, default 3. .lex columns and time scales
  are printed first. The printed order of variables is returned
  invisibly.

o an AaJ.Lexis method has been added which gives the Aalen-Johansen
  estimator of state probabilities. Wrapper for survfit for a
  multistate setup in a Lexis object.

o glitch in Lexis when assigning entry.status when exit.status is
  numeric. Only worked if notes = TRUE (the default).

o cal.yr returned an object of class c("cal.yr","numeric"), now changed
  to  c("cal.yr","double"). 'numeric' seems not to be a useful class
  designation when 'double' is meant.

o COEF.polr was wrongly defined, caused a crash of ci.lin() on a polr
  object. Fixed. 

o Using a factor as response in a binomial glm/gam model caused df2ctr
  called from ci.lin to crash. Fixed.

o Update of the utility df2ctr where gam models with factors
  crashed. Now levels of factors in models are now properly extracted
  from gam objects.

o A column with AIC is now added to the Anova entry of an apc object
  returned by apc.fit.

o Grooming of code and vignette for ci.Crisk. ci.Crisk now also
  accepts a list with one element to compute cumulative risk and