@@ -27,6 +27,31 @@ segments( c(x     , x-ch/3),
 invisible( c( x, y, wd, ht ) )
 }
 
+legendbox <-
+function(x, y,
+      state = "State",
+         py = "Person-time",
+      begin = "no. begin",
+        end = "no. end",
+      trans = "Transitions",
+      rates = "\n(Rate)",
+       font = 1,
+        ...)
+{
+btxt <- paste0(state, "\n",
+                  py, "\n",
+               begin, "          ", end)
+ww <- strwidth (btxt) * 1.2
+hh <- strheight(btxt) * 1.3
+zz <- tbox(btxt,
+           x = x, y = y,
+           wd = ww,
+           ht = hh,
+         font = font,
+           ...)
+text(x + ww / 1.8, y, paste0(trans, rates), adj = 0)
+}
+
 fillarr <-
 function( x1, y1, x2, y2, gap=2, fr=0.8,
           angle=17, lwd=2, length=par("pin")[1]/30, ... )
