@@ -1,3 +1,4 @@
+
 \name{ROC}
 \alias{ROC}
 %- Also NEED an `\alias' for EACH other topic documented here.
@@ -79,8 +80,7 @@ function of \eqn{x} is \code{test}\eqn{\geq x}{>=x} as a predictor of
 construction of the ROC curve}
   0, 1 or 2 plots are produced according to the setting of \code{plot}.
 }
-\author{Bendix Carstensen, Steno Diabetes Center \& University of
-  Copenhagen,
+\author{Bendix Carstensen, Steno Diabetes Center Copenhagen,
   \url{http://bendixcarstensen.com} }
 \examples{
 x <- rnorm( 100 )
